# cloudcost-analyzer

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
.dlt/: config.toml
.github/workflows/: etl-pipeline.yml
api/: auth.py  cache.py  database.py  main.py
pipelines/: aws_pipeline.py  azure_pipeline.py  gcp_pipeline.py  http_client.py  stripe_pipeline.py
tests/: conftest.py  test_api.py  test_azure_pipeline.py  test_cache.py  test_database.py  test_gcp_pipeline.py  test_stripe_pipeline.py
viz_rill/: dbt_project.yml
viz_rill/dashboards/: rill.yaml
viz_rill/dashboards/connectors/: postgres.yaml
viz_rill/dashboards/dashboards/: cost_explore.yaml  unit_economics_explore.yaml
viz_rill/dashboards/metrics/: cost_metrics.yaml  unit_economics_metrics.yaml
viz_rill/dashboards/models/: unified_costs.yaml  unit_economics.yaml
viz_rill/models/: unified_cost_model.sql
viz_rill/models/staging/: sources.yml  stg_aws_costs.sql  stg_azure_costs.sql  stg_gcp_costs.sql  stg_stripe_revenue.sql
